[project]
name = "video-game-codex-backend"
version = "0.1.0"
description = "Backend for Video Game Codex"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "sqlmodel>=0.0.8",
    "psycopg2-binary>=2.9.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.6",
]

[tool.pyright]
include = ["app"]
